# mnc

./: Cargo.toml  README.md  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: display.rs  light_sensor.rs  main.rs  moisture_sensor.rs
