[package]
name = "mnc"
version = "0.1.0"
edition = "2021"

[dependencies]
bh1750 = "0.1"
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy"
rev = "050d3d1a092eca69b14bd07cd5ca8496a0f09f2d"
features = [
  "arch-cortex-m",
  "executor-thread",
  "integrated-timers",
  "defmt",
  "nightly",
]

[dependencies.embassy-rp]
git = "https://github.com/embassy-rs/embassy"
rev = "050d3d1a092eca69b14bd07cd5ca8496a0f09f2d"
features = [
  "rp2040",
  "boot2-generic-03h",
  "critical-section-impl",
  "time-driver",
  "defmt",
]

[dependencies.embassy-sync]
git = "https://github.com/embassy-rs/embassy"
rev = "050d3d1a092eca69b14bd07cd5ca8496a0f09f2d"

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy"
rev = "050d3d1a092eca69b14bd07cd5ca8496a0f09f2d"
features = ["defmt-timestamp-uptime-s"]

[dependencies.panic-probe]
version = "0.3"
features = ["print-defmt"]
