[package]
name = "mnc"
version = "0.1.0"
edition = "2021"
authors = ["flippette <me@flippo.cc>"]
license = "Unlicense"

[dependencies]
bh1750 = "0.1"
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
display-interface-spi = "0.5"
embedded-layout = "0.4"
mipidsi = "0.8"
profont = "0.7"
static_cell = "2.1"

[dependencies.cortex-m]
version = "0.7"
features = ["critical-section-single-core"]

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy"
rev = "050d3d1a092eca69b14bd07cd5ca8496a0f09f2d"
features = [
  "arch-cortex-m",
  "executor-thread",
  "integrated-timers",
  "defmt",
  "nightly",
]

[dependencies.embassy-futures]
git = "https://github.com/embassy-rs/embassy"
rev = "050d3d1a092eca69b14bd07cd5ca8496a0f09f2d"
features = ["defmt"]

[dependencies.embassy-rp]
git = "https://github.com/embassy-rs/embassy"
rev = "050d3d1a092eca69b14bd07cd5ca8496a0f09f2d"
features = ["rp2040", "boot2-generic-03h", "time-driver", "defmt"]

[dependencies.embassy-sync]
git = "https://github.com/embassy-rs/embassy"
rev = "050d3d1a092eca69b14bd07cd5ca8496a0f09f2d"

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy"
rev = "050d3d1a092eca69b14bd07cd5ca8496a0f09f2d"
features = ["defmt-timestamp-uptime-s"]

[dependencies.embedded-graphics]
version = "0.8"
features = ["defmt"]

[dependencies.embedded-hal-bus]
version = "0.2"
features = ["defmt-03"]

[dependencies.heapless]
version = "0.8"
features = ["defmt-03"]

[dependencies.panic-probe]
version = "0.3"
features = ["print-defmt"]

[dependencies.portable-atomic]
version = "1.9"
features = ["critical-section"]
